tests/urmoac/input/wkt/errors/polygons_duplicate_id/sources.wkt
#id;pos;[var]
1000;POLYGON((-240 -10, -260 -10, -260 10, -240 10, -240 -10))
1000;POLYGON((-240 -10, -260 -10, -260 10, -240 10, -240 -10))
